# braid

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile
braid/: BraidServer.cc  CMakeLists.txt
braid/src/: CMakeLists.txt
braid/src/memory/: CMakeLists.txt
braid/src/memory/include/braid/memory/: PooledObject.h
braid/src/net/: CMakeLists.txt
braid/src/net/include/braid/net/: IOCompletion.h  IOOperationClose.h  IOOperationRecv.h  IOOperationSend.h  IORequestQueue.h  IOUringObject.h
braid/src/net/src/: IOCompletion.cc  IOOperationAccept.cc  IOOperationClose.cc  IOOperationNop.cc  IOOperationRecv.cc  IOOperationSend.cc  IORequestQueue.cc
braid/src/service/: CMakeLists.txt
braid/src/service/include/braid/net/: IOCompletion.h  IOOperation.h  IOOperationAccept.h  IOOperationClose.h  IOOperationNop.h  IOOperationRecv.h  IOOperationSend.h  IOOperationSendBuffer.h  IOUringObject.h
braid/src/service/include/braid/service/: Actor.h  IOPool.h  Service.h  ServiceBuilder.h  ServiceSession.h
braid/src/service/include/braid/thread/: IOURingThread.h  Thread.h
braid/src/service/src/net/: IOCompletion.cc  IOOperationAccept.cc  IOOperationClose.cc  IOOperationNop.cc  IOOperationRecv.cc  IOOperationSend.cc  IOOperationSendBuffer.cc
braid/src/service/src/service/: Actor.cc  Service.cc  ServiceObject.cc  ServiceSession.cc
braid/src/service/src/thread/: IOURingThread.cc  Thread.cc  WorkerThread.cc
braid/src/task/: CMakeLists.txt
braid/src/task/include/braid/task/: Task.h  TaskSerializer.h
braid/src/task/src/task/: TaskDistributor.cc  TaskSerializer.cc
braid/src/util/: CMakeLists.txt
braid/src/util/include/braid/util/: BraidPCH.h  Macro.h
first-server/: CMakeLists.txt  FirstServer.cc  FirstServer.cpp  FirstServer.h
first-server/Network/IO/: IOCompletion.cc  IOCompletion.h  IORequestQueue.cc  IORequestQueue.h  IOUring.cpp  IOUring.h  IOUringObject.h
first-server/Network/IO/Operation/: IOOperationRecv.cc  IOOperationRecv.h  IOOperationSend.cc  IOOperationSend.h
first-server/Thread/: Thread.h
first-server/Thread/IO/: AcceptorThread.cc  AcceptorThread.h  IOURingThread.cc  IOURingThread.h  WorkerThread.cc  WorkerThread.h
first-server/Util/: ConcurrentStack.h  CuncurrentStack.cc
first-server/src/: CMakeLists.txt
first-server/src/net/include/net/: IOOperation.h  IOOperationAccept.h  IOOperationNop.h  IOOperationRecv.h  IOOperationSend.h  IOUringObject.h
first-server/src/net/src/: IOCompletion.cc  IOOperationAccept.cc  IOOperationNop.cc  IOOperationRecv.cc  IOOperationSend.cc  IORequestQueue.cc
first-server/src/service/: CMakeLists.txt
first-server/src/service/include/service/: Service.h  ServiceBuilder.h  ServiceObject.h
first-server/src/service/src/service/: Service.cc  ServiceObject.cc
first-server/src/service/src/task/: TaskSerializer.cc
first-server/src/service/src/thread/: WorkerThread.cc
sample-server/: CMakeLists.txt  SampleServer.cc
test-client/: CMakeLists.txt
